# plonky3-eon

./: Cargo.toml  cliff.toml  tomlfmt.toml
.github/workflows/: ci.yml
air/: Cargo.toml
air/src/: utils.rs  virtual_column.rs
blake3/: Cargo.toml
blake3-air/: Cargo.toml
bn254/: Cargo.toml
bn254/benches/: bench_curve.rs  bench_field.rs
bn254/src/: bn254.rs  curve.rs  field.rs  helpers.rs  lib.rs  poseidon2.rs
challenger/: Cargo.toml
challenger/src/: duplex_challenger.rs  grinding_challenger.rs  hash_challenger.rs  lib.rs  multi_field_challenger.rs  serializing_challenger.rs
commit/: Cargo.toml
commit/src/: dummy_mmcs.rs  dummy_pcs.rs  lib.rs
commit/src/adapters/: extension_mmcs.rs
dft/: Cargo.toml
dft/benches/: fft.rs
dft/src/: naive.rs  util.rs
eon-air/: Cargo.toml
eon-air/src/: air.rs  builder.rs  filtered_builder.rs  lib.rs
eon-uni-stark/: Cargo.toml
eon-uni-stark-0/: Cargo.toml
eon-uni-stark-0/src/: api.rs  check_constraints.rs  config.rs  lib.rs  proof.rs  symbolic_variable.rs  util.rs
eon-uni-stark/src/: check_constraints.rs  folder.rs  lib.rs  proof.rs  prover.rs  symbolic_builder.rs  symbolic_expression.rs  verifier.rs
eon-uni-stark/tests/: fib_air.rs  fibonacci_air.rs  lookup_air.rs  perm_air.rs
examples/: Cargo.toml
field/: Cargo.toml
field-testing/: Cargo.toml
field/src/: coset.rs  integers.rs
field/tests/: coset_tests.rs  helpers_test.rs
interpolation/: Cargo.toml
interpolation/src/: lib.rs
keccak/: Cargo.toml
keccak-air/: Cargo.toml
keccak-air/examples/: prove_baby_bear_sha256.rs  prove_baby_bear_sha256_compress.rs  prove_goldilocks_keccak.rs  prove_goldilocks_poseidon2.rs  prove_goldilocks_sha256.rs  prove_m31_sha256.rs
keccak/benches/: bench_keccak.rs
kzg/: Cargo.toml
kzg-example/: Cargo.toml  README.md
kzg-example/examples/: fibonacci_kzg.rs
kzg-example/src/: fibonacci_air.rs  lib.rs  proof.rs
kzg/benches/: kzg_benches.rs
kzg/src/: lib.rs  mmcs.rs  params.rs  pcs.rs  tests.rs  util.rs
lookup/: Cargo.toml
lookup/src/: error.rs  lib.rs  logup.rs  lookup_traits.rs  tests.rs
matrix/: Cargo.toml
matrix/src/: dense.rs  lib.rs  row_index_mapped.rs
mds/: Cargo.toml
mds/src/: coset_mds.rs  integrated_coset_mds.rs
merkle-tree/: Cargo.toml
merkle-tree/src/: hiding_mmcs.rs  mmcs.rs
monolith/: Cargo.toml
multilinear-util/: Cargo.toml
poseidon/: Cargo.toml
poseidon2/: Cargo.toml
poseidon2-air/: Cargo.toml
poseidon2/benches/: poseidon2.rs
poseidon2/src/: external.rs
sha256/: Cargo.toml
symmetric/: Cargo.toml
symmetric/src/: serializing_hasher.rs
uni-stark/: Cargo.toml
uni-stark/src/: check_constraints.rs  symbolic_builder.rs  symbolic_expression.rs
uni-stark/tests/: fib_air.rs  mul_air.rs  mul_fib_pair.rs  rc_sub_builder.rs
