[package]
name = "eon-air"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-air = { path = "../air" }
p3-field = { path = "../field" }
p3-lookup = { path = "../lookup" }
p3-matrix = { path = "../matrix" }
