[package]
name = "p3-kzg"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "KZG commitment scheme for Plonky3 using BN254"

[dependencies]
p3-bn254 = { workspace = true }
p3-commit = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rand = { workspace = true, features = ["std", "small_rng"] }
halo2curves = "0.9"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "kzg_benches"
harness = false

[lib]
name = "p3_kzg"
