[package]
name = "p3-symmetric"
description = "A modular framework for symmetric cryptographic primitives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

itertools.workspace = true
p3-field.workspace = true
serde = { workspace = true, features = ["alloc"] }

[dev-dependencies]
# p3-koala-bear.workspace = true

p3-bn254.workspace = true

[lints]
workspace = true
